# tiro-kernel-ci

./: README.md
.github/workflows/: build-kernel.yml  build-rom.yml
anykernel/: anykernel.sh  banner  version
anykernel/files/dtb/: kurumi_gpu.dtb  stock_gpu.dtb
anykernel/ramdisk/overlay.d/: init.kurumi.rc
anykernel/ramdisk/overlay.d/sbin/: kurumi_battery
anykernel/tools/: ak3-core.sh  kurumi_menu.sh
kurumi-daemon/: Cargo.toml
kurumi-daemon/src/: main.rs
local_manifests/: nubia_tiro.xml
scripts/: tiro_dtb_trim.py  tiro_gki_modules_trim.py  tiro_kmi_fix.py  tiro_module_outs_fix.py
