[package]
name = "kurumi"
version = "1.0.0"
edition = "2021"
description = "Kurumi kernel userspace perf/thermal daemon (RedMagic 9 Pro / SM8650)"

[[bin]]
name = "kurumi"
path = "src/main.rs"

# Small, self-contained, no external crates (std only) so it cross-compiles to a
# fully-static aarch64 musl binary that runs on Android bionic with no libc dep.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
